[gd_scene load_steps=4 format=3 uid="uid://dpvf3jcnqy8r5"]

[ext_resource type="Script" path="res://scenes/windows/facility_detail_modal.gd" id="1_facility_detail"]
[ext_resource type="FontFile" uid="uid://fitttpkbkn2q" path="res://assets/fonts/honeyblot_caps.ttf" id="2_facility_detail"]

[sub_resource type="LabelSettings" id="LabelSettings_facility_detail"]
font = ExtResource("2_facility_detail")
font_size = 24
font_color = Color(0.050980393, 0.16862746, 0.27058825, 1)
shadow_size = 0

[node name="FacilityDetailModal" type="CanvasLayer"]
script = ExtResource("1_facility_detail")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"DefaultPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Facility Details"
label_settings = SubResource("LabelSettings_facility_detail")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FacilityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Facility Type:"

[node name="FacilityDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Facility description will appear here"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreatureLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Assigned Creature: None"

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Save"

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Cancel"
